--- a/lsbeat.yml
+++ b/lsbeat.yml
@@ -4,7 +4,8 @@
 
 lsbeat:
   # Defines how often an event is sent to the output
-  period: 1s
+  period: 10s
+  path: "."
 
 #================================ General =====================================
 
