--- a/etc/fields.yml
+++ b/etc/fields.yml
@@ -8,12 +8,12 @@
       description: >
         PLEASE UPDATE DOCUMENTATION
     #new fiels added lsbeat
-    - name: modTime
+    - name: mod_time
       type: date
-    - name: filename
+    - name: file_name
       type: text
-    - name: fullname
-    - name: isDirectory
+    - name: full_name
+    - name: is_directory
       type: boolean
-    - name: fileSize
+    - name: file_size
       type: long
