--- a/lsbeat.full.yml
+++ b/lsbeat.full.yml
@@ -1,3 +1,11 @@
+################### Lsbeat Configuration Example #########################
+
+############################# Lsbeat ######################################
+
+lsbeat:
+  # Defines how often an event is sent to the output
+  period: 10s
+  path: "."
 
 #================================ General =====================================
 
@@ -95,8 +103,8 @@ output.elasticsearch:
 
   # Optional protocol and basic auth credentials.
   #protocol: "https"
-  #username: "admin"
-  #password: "s3cr3t"
+  #username: "elastic"
+  #password: "changeme"
 
   # Dictionary of HTTP parameters to pass within the url with index operations.
   #parameters:
